[gd_scene load_steps=3 format=3 uid="uid://ds7q43ofqxs06"]

[ext_resource type="Script" path="res://scenes/components/yes_no_menu/yes_no_menu.gd" id="1_rcx3c"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_q23on"]
bg_color = Color(0, 0, 0, 0.866667)
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25
expand_margin_left = 25.0
expand_margin_top = 25.0
expand_margin_right = 25.0
expand_margin_bottom = 25.0

[node name="YesNoMenu" type="CanvasLayer"]
script = ExtResource("1_rcx3c")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -62.5
offset_right = 200.0
offset_bottom = 62.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Panel" type="Panel" parent="Control/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_q23on")

[node name="VBoxContainer" type="VBoxContainer" parent="Control/MarginContainer"]
custom_minimum_size = Vector2(400, 125)
layout_mode = 2
theme_override_constants/separation = 50

[node name="Label" type="Label" parent="Control/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Are you sure?"

[node name="HBoxContainer" type="HBoxContainer" parent="Control/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 10

[node name="YesBtn" type="Button" parent="Control/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8
text = "Yes"
flat = true

[node name="NoBtn" type="Button" parent="Control/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 8
text = "No"
flat = true

[connection signal="gui_input" from="Control" to="." method="_on_control_gui_input"]
[connection signal="pressed" from="Control/MarginContainer/VBoxContainer/HBoxContainer/YesBtn" to="." method="_on_yes_btn_pressed"]
[connection signal="pressed" from="Control/MarginContainer/VBoxContainer/HBoxContainer/NoBtn" to="." method="_on_no_btn_pressed"]
